# sshd-command

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
examples/: principals.tera
nix/: package.nix
src/: context.rs  error.rs  frontmatter.rs  lib.rs  macros.rs  main.rs  tokens.rs
tests/: cli.rs
tests/fixtures/happy/: json-principals.tera  principals.out  principals.tera  readme-principals.out  readme-principals.tera
tests/fixtures/sad/: missing-context.tera  missing-token-complete-user.tera  unsupported-token.tera
